# fcast

./: .cirrus.yml  .gitignore  .gitlab-ci-worker-cloud-init.yml  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TRADEMARK.md  _typos.toml  flake.nix  package-lock.json  package.json  rustfmt.toml
crates/app-updater/: Cargo.toml
crates/app-updater/src/: lib.rs
crates/fcast-protocol/: Cargo.toml  build.rs
crates/fcast-protocol/flatbuffers/: fcast.fbs
crates/fcast-protocol/misc/: .gitignore  crosstest.sh  v4_handshake.c  v4_handshake.js  v4_handshake.py
crates/fcast-protocol/src/: companion.rs  lib.rs  main.rs  receiver.rs  sender.rs  v1.rs  v2.rs  v3.rs  v4.rs  v4_generated.rs
crates/fcast-protocol/templates/: v4_docs.md
crates/fcast-protocol/tests/: network_stream.rs
crates/google-cast-protocol/: Cargo.toml
crates/google-cast-protocol/src/: lib.rs
crates/inhibit-screensaver/: Cargo.toml  README.md
crates/inhibit-screensaver/src/: lib.rs
crates/libplacebo/: Cargo.toml
crates/libplacebo/src/: lib.rs
crates/receiver-core/: Cargo.toml  build.rs
crates/receiver-core/shaders/: blur_frag.glsl
crates/receiver-core/src/: application.rs  cuda.rs  cuda_vulkan.rs  dmabuf.rs  egl.rs  external_ui.rs  fcast.rs  fcasthttpsrc.rs  fcasttextoverlay.rs  fcastwhepsrcbin.rs  fcompsrc.rs  fwebrtcsrc.rs  gcast.rs  graphics.rs  gstreamer.rs  gui.rs  image.rs  inspector_graph.rs  iosurface.rs  lib.rs  linux_tray.rs  logging.rs  mac_win_tray.rs  mdns.rs  media_formats.rs  media_source.rs  message.rs  mpris.rs  opengl.rs  placebo.rs  player.rs  pwaudiosink.rs  raop.rs  render_latency.rs  sabrumpsrc.rs  user_agent.rs  utils.rs  va.rs  video.rs  video_sink.rs  (+1 more)
crates/receiver-core/ui/: common.slint  globals.slint  inspector.slint  main.slint  toast-overlay.slint
crates/sabrump/: Cargo.toml  build.rs
crates/sabrump/proto/: common.proto  ump_parts.proto  video_playback_abr_request.proto
crates/sabrump/src/: buffer.rs  error.rs  format.rs  http.rs  lib.rs  proto.rs  segment.rs  session.rs  spec.rs  ump.rs
crates/sabrump/tests/: session.rs  ump_reader.rs
fast/: Cargo.toml  README.md
fast/src/: lib.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fcast_packet_reader.rs
receivers/experimental/android/: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  build_libgst.sh  settings.gradle
receivers/experimental/desktop/: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  build.rs  fcast-receiver.nix  fcast-receiver.spec
receivers/experimental/fhs/: .gitlab-ci.yml  Cargo.toml  build.rs  wrapper.h
receivers/experimental/rcore/: Cargo.toml
sdk/common/fcast-protocol/: Cargo.toml  v4.scheme.json
sdk/file-server/: Cargo.toml
sdk/file-server/src/: lib.rs
sdk/mirroring_core/: Cargo.toml
sdk/mirroring_core/src/: lib.rs  preview.rs  transmission.rs  whep_signaller.rs  yt_dlp.rs
sdk/mirroring_core/ui/: common.slint
sdk/sender/chromecast-protocol/: Cargo.toml  build.rs
sdk/sender/fcast-sender-sdk/: Cargo.toml  build.rs  uniffi.toml
sdk/sender/fuzz/: Cargo.toml
sdk/sender/googlecast-protocol/: Cargo.toml  build.rs
sender-sdk/fcast-sender-sdk/: Cargo.toml  build.rs
sender-sdk/fcast-sender-sdk/src/: airplay1.rs  airplay_common.rs  casting_device.rs  casting_manager.rs  chromecast.rs  context.rs  device.rs  discovery.rs  fcast.rs  file_server.rs  http.rs  lib.rs  net_utils.rs  utils.rs
sender-sdk/fuzz/: Cargo.toml
sender-sdk/fuzz/fuzz_targets/: fuzz_http_parse_request_start_line.rs  fuzz_plist_parser.rs  fuzz_plist_reader.rs  fuzz_utils_decode_dns_txt.rs
sender-sdk/plist/: Cargo.toml
sender-sdk/plist/src/: lib.rs
senders/android/: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  settings.gradle
senders/android/app/: build.gradle
senders/android/shaders/: uv_frag.glsl  vert.glsl  y_frag.glsl
senders/android/src/: lib.rs
senders/android/ui/: main.slint
senders/desktop/: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  fcast-sender.nix  org.fcast.sender.yml
senders/desktop/src/: device_info_parser.rs  file_server.rs  infer.rs  lib.rs  linux.rs  macos.rs  main.rs  starting_binary.rs  updater.rs
senders/desktop/ui/: gallery.slint  main.slint
senders/terminal/: .gitignore  Cargo.toml  README.md  image_playlist_example.json  video_playlist_example.json
senders/terminal/src/: fcastsession.rs  lib.rs  main.rs  models.rs  transport.rs
tools/fast/: Cargo.toml  README.md
tools/fast/src/: engine.rs  lib.rs  main.rs
tools/fast/tests/: mock_receiver.rs  protocol_messages.rs
tools/remote-pipeline-dbg/: Cargo.toml  README.md
tools/remote-pipeline-dbg/src/: lib.rs  main.rs  render.rs
tools/remote-pipeline-dbg/ui/: main.slint
xtask/: Cargo.toml
xtask/patches/: decodebin3-auto-select-text-property.patch  gstevent-inline-payload.patch  gstevent-qos-inline-payload.patch  gstpad-forward-avoid-allocations.patch  gstpad-sticky-repush-stale-peer-cookie.patch  matroska-demux-seek-range-crash.patch  matroska-ebml-readers-reuse.patch  matroskademux-lace-size-stack.patch  multiqueue-item-freelist.patch  playsink-keep-text-chain-until-teardown.patch  playsink-wait-for-video-block-on-reconfigure.patch  scaletempo-s16-overlap-overflow.patch  subtitleoverlay-idle-video-block-on-reconfigure.patch  subtitleoverlay-unlink-defer-locked-work.patch
xtask/patches/disabled/: playsink-defer-text-chain-removal-while-paused.patch
xtask/patches/ffmpeg/: 0001-meson-don-t-generate-x86asm-debug-info-when-debug-fa.patch
xtask/patches/flac/: 0001-meson-skip-command-line-tools-when-built-as-subproje.patch
xtask/patches/libnice/: 0001-stun-skip-tools-when-built-as-subproject.patch
xtask/patches/libxml2/: 0001-meson-skip-tools-tests-and-examples-when-built-as-su.patch
xtask/src/: android.rs  csharp.rs  flutter.rs  gstreamer.rs  kotlin.rs  lib.rs  main.rs  mdns.rs  protocol.rs  receiver.rs  sender.rs  swift.rs  test_corpus.rs  workspace.rs
xtask/templates/: Info.plist.askama  Product.wxs.askama  receiver.Info.plist.askama  receiver.Product.wxs.askama  sender.Info.plist.askama
(+800 files in other folders)
