[workspace]
members = [
    "xtask",
    "sdk/sender/fcast-sender-sdk",
    "senders/terminal",
    "crates/fcast-protocol",
    "crates/mirroring-core",
    "senders/desktop",
    "senders/android",
    "tools/fast",
    "crates/file-server",
    "senders/android",
    "crates/receiver-core",
    "receivers/desktop",
    "receivers/experimental/android",
    "receivers/experimental/fhs",
    "tools/remote-pipeline-dbg",
    "crates/app-updater",
    "crates/google-cast-protocol",
    "crates/receiver-resources",
    "crates/libplacebo-sys",
    "crates/libplacebo",
    "crates/egl-sys",
    "crates/fiatlux-sys",
    "crates/fiatlux",
    "crates/inhibit-screensaver",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
gst = { package = "gstreamer", version = "0.25" }
gst-app = { package = "gstreamer-app", version = "0.25", features = [ "v1_24" ] }
gst-video = { package = "gstreamer-video", version = "0.25", features = [ "v1_24" ] }
gst-base = { package = "gstreamer-base", version = "0.25", features = [ "v1_24" ] }
gst-plugin-rtp = { version = "0.15", features = [ "static" ] }
gst-plugin-webrtc = { rev = "06c29061365d9ba19956540da47abf8dffea7d31", git = "https://github.com/MAlba124/gst-plugins-rs.git", default-features = false }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11.8"
mdns-sd = { git = "https://github.com/MAlba124/mdns-sd.git", rev = "edaf667f35e6ec9923a7e2a309e11a778473f88e" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-gstreamer = "0.9"
tracing-panic = "0.1.2"
parking_lot = "0.12"
slint = { git = "https://gitlab.futo.org/videostreaming/fcast-slint.git", rev = "8f4eee15185c5e03f45257e8eec9efd306d1067f", default-features = false }
slint-build = { git = "https://gitlab.futo.org/videostreaming/fcast-slint.git", rev = "8f4eee15185c5e03f45257e8eec9efd306d1067f" }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.23", features = [ "v4" ] }
bytes = "1"
smallvec = { version = "1", features = ["serde"] }
smol_str = { version = "0.3", features = ["serde"] }
toml_edit = { version = "0.25", features = ["serde"] }
futures = "0.3"
lazy_static = "1.5"
rand = "0.10"
num_cpus = "1"
image_swizzle = "0.3.0"
mimalloc = { version = "0.1", features = ["v3"] }
ctrlc = "3"
hyper = "1"
hyper-util = "0.1"
bindgen = "0.72"
webbrowser = "1"
glow = "0.17"
libloading = "0.9.0"
directories = "6.0.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.release-dbg]
inherits = "release"
debug = "full"
strip = false
