[workspace]
members = [
    "xtask",
    "sdk/sender/fcast-sender-sdk",
    "sdk/sender/flutter-plugin/rust",
    "senders/terminal",
    "crates/fcast-protocol",
    "crates/mirroring-core",
    "senders/desktop",
    "senders/android",
    "tools/fast",
    "crates/file-server",
    "senders/android",
    "crates/receiver-core",
    "receivers/desktop",
    "receivers/experimental/android",
    "receivers/experimental/fhs",
    "tools/remote-pipeline-dbg",
    "crates/app-updater",
    "crates/google-cast-protocol",
    "crates/receiver-resources",
    "crates/libplacebo-sys",
    "crates/libplacebo",
    "crates/libplacebo-vulkan",
    "crates/egl-sys",
    "crates/fiatlux-sys",
    "crates/fiatlux",
    "crates/inhibit-screensaver",
    "crates/get-type-string-derive",
    "crates/fcastplaybin",
    "fuzz", "sdk/sender/examples/image-viewer", "crates/apple-fairplay",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
gst = { package = "gstreamer", version = "0.25" }
gst-app = { package = "gstreamer-app", version = "0.25", features = [ "v1_24" ] }
gst-video = { package = "gstreamer-video", version = "0.25", features = [ "v1_24" ] }
gst-base = { package = "gstreamer-base", version = "0.25", features = [ "v1_24" ] }
gst-plugin-rtp = { rev = "f8bdc4929ff79e2567d97c5e95ac90b452812c79", git = "https://gitlab.futo.org/fcast/gst-plugins-rs.git", default-features = false, features = [ "static", "depay" ] }
gst-plugin-webrtc = { rev = "f8bdc4929ff79e2567d97c5e95ac90b452812c79", git = "https://gitlab.futo.org/fcast/gst-plugins-rs.git", default-features = false }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.25" }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.25" }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11.8"
mdns-sd = { git = "https://github.com/MAlba124/mdns-sd.git", rev = "7523ce8c0603b6c302938cf32940d19bf096eb39" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-gstreamer = { git = "https://github.com/MAlba124/tracing-gstreamer.git", rev = "3f7965c" }
tracing-panic = "0.1.2"
parking_lot = "0.12"
slint = { git = "https://github.com/MAlba124/slint.git", rev = "f05c68ab3", default-features = false }
slint-build = { git = "https://github.com/MAlba124/slint.git", rev = "f05c68ab3" }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.23", features = [ "v4" ] }
bytes = "1"
smallvec = { version = "1", features = ["serde"] }
smol_str = { version = "0.3", features = ["serde"] }
toml_edit = { version = "0.25", features = ["serde"] }
futures = "0.3"
lazy_static = "1.5"
rand = "0.10"
num_cpus = "1"
image_swizzle = "0.3.0"
mimalloc = { version = "0.1", features = ["v3"] }
ctrlc = "3"
hyper = "1"
hyper-util = "0.1"
bindgen = "0.72"
webbrowser = "1"
glow = "0.17"
libloading = "0.9.0"
askama = "0.15"
rustls = { version = "0.23", default-features = false }
tokio-rustls = { version = "0.26.4", default-features = false }
rustls-pki-types = "1.14"
sha2 = "0.11"
isolang = "2.4.0"
self_cell = "1.2.2"
directories = "6.0.0"
regex = "1.12"
infer = "0.19.0"
image = { version = "0.25", default-features = false }
base64 = "0.22"
x509-parser = "0.17"
rcgen = "0.14"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-dbg]
inherits = "release"
debug = "full"
strip = false

[profile.release-small]
inherits = "release"
opt-level = "s"
panic = "abort"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package."*"]
debug = "line-tables-only"

[patch.crates-io]
# Disable encoders
image = { git = "https://gitlab.futo.org/fcast/image-rs.git", rev = "9ee78f3f" }
rustls = { git = "https://gitlab.futo.org/fcast/rustls.git", rev = "72ec207b" }
