[package]
name = "xtask-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fcast-protocol.path = "../crates/fcast-protocol"
arbitrary = { version = "1", features = ["derive"] }

[[bin]]
name = "fcast_packet_reader"
path = "fuzz_targets/fcast_packet_reader.rs"
test = false
doc = false
bench = false
