[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap.workspace = true
xshell = "0.2.7"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
anyhow = "1.0.98"
camino = { version = "1.1.10", features = [ "serde1" ] }
uniffi_bindgen = "0.29.4"
mdns-sd.workspace = true
ctrlc = "3.5"
toml_edit.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
walkdir = "2.5.0"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
askama = "0.14.0"