[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap.workspace = true
xshell = "0.2.7"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
camino = { version = "1.1.10", features = [ "serde1" ] }
uniffi_bindgen = { version = "0.29.4", optional = true }
mdns-sd.workspace = true
ctrlc.workspace = true
toml_edit.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
walkdir = "2.5.0"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
askama.workspace = true

[features]
default = []
uniffi = ["dep:uniffi_bindgen"]
