[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
xshell = "0.2.7"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
camino = { version = "1.1.10", features = [ "serde1" ] }
uniffi_bindgen = { version = "0.31.0", optional = true }
mdns-sd = { workspace = true, optional = true }
ctrlc = { workspace = true, optional = true }
toml_edit.workspace = true
askama.workspace = true
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
flatc-rust = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
walkdir = "2.5.0"

[features]
default = []
uniffi = ["dep:uniffi_bindgen"]
mdns = ["dep:mdns-sd", "dep:ctrlc"]
