[package]
name = "app-updater"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
reqwest = { version = "0.13", features = [ "native-tls", "json" ] }
ctor = "0.2"
tempfile = "3.24.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
bytes.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "1.1.5"
tar = "0.4.44"
osakit = { version = "0.3", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }