[package]
name = "google-cast-protocol"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Google Cast protocol types"
repository = "https://gitlab.futo.org/videostreaming/fcast"

[dependencies]
serde.workspace = true
serde_json.workspace = true
prost = "0.14.4"

[build-dependencies]
protox = "0.9.1"
prost-build = { version = "0.14.4" }