[package]
name = "libplacebo"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
libplacebo-sys.path = "../libplacebo-sys"
tracing.workspace = true
libloading = { workspace = true, optional = true }

[features]
default = []
vulkan = ["libplacebo-sys/vulkan", "dep:libloading"]