[package]
name = "receiver-core"
version = "3.0.2"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
tokio.workspace = true
gst = { workspace = true, features = [ "v1_26" ] }
fcast-protocol = { path = "../../crates/fcast-protocol", features = ["tokio-receiver"] }
gethostname = "1"
anyhow.workspace = true
futures.workspace = true
tokio-stream = "0.1"
url = "2"
thiserror = "2"
mdns-sd.workspace = true
fast_qr = { version = "0.13", features = [ "svg" ] }
gst-app.workspace = true
gst-video.workspace = true
gst-base.workspace = true
gst-pbutils.workspace = true
serde.workspace = true
serde_json.workspace = true
if-addrs = "0.15"
base64.workspace = true
bitflags = "2.10"
smallvec.workspace = true
smol_str.workspace = true
parking_lot.workspace = true
bytes.workspace = true
gst-plugin-webrtc = { workspace = true, features = [ "static", "src", "whep-client" ] }
gst-plugin-dav1d = { git = "https://github.com/MAlba124/gst-plugins-rs.git", rev = "89b30ced61a990b01ea984bbf0acb2bbcb8f166f", features = [ "static" ], optional = true }
gst-tag = { package = "gstreamer-tag", version = "0.25" }
num_cpus.workspace = true
rand = { workspace = true, features = ["std_rng"] }
remote-pipeline-dbg = { path = "../../tools/remote-pipeline-dbg", default-features = false, features = ["client"] }
tracing-tracy = { version = "=0.11.2", optional = true }
pango = { version = "0.22.0", features = ["v1_44"] }
hayro-jpeg2000 = "0.3"
jxl-oxide = { version = "0.12", features = ["image"] }
oneshot = { version = "0.2", features = ["std"] }
libplacebo.path = "../libplacebo"
toml_edit.workspace = true
directories.workspace = true
headers = "0.4"
mime = "0.3"
regex.workspace = true
gst-webrtc.workspace = true
self_cell.workspace = true
image = { workspace = true, features = [
    "avif-native", "bmp", "dds", "ff", "gif", "ico",
    "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp",
] }

# RAOP
rtsp-types = "0.1"
sdp-types = "0.1"
rsa = { version = "0.9", features = ["sha2", "sha1"] }
sha2.workspace = true
sha1 = "0.10"
lazy_static = "1.5"
md-5 = "0.11"
aes = "0.8"
alac = { version = "0.5", default-features = false }
cbc = { version = "0.1", features = ["alloc", "std"] }
nom = "7.1"
gst-audio = { package = "gstreamer-audio", version = "0.25" }
byte-slice-cast = "1"
rtp-types = "0.1"

# AirPlay
plist = { version = "1", optional = true }
ctr = { version = "0.9", optional = true }
apple-fairplay = { path = "../apple-fairplay", optional = true }

# Google Cast
rustls-pki-types.workspace = true
google-cast-protocol = { path = "../google-cast-protocol" }
rcgen.workspace = true
uuid.workspace = true

glow.workspace = true


[dependencies.slint]
workspace = true
features = [
    "compat-1-2",
    "std",
]

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-gstreamer.workspace = true
tracing-panic.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }
gst-plugin-rtp = { workspace = true, optional = true }
clap.workspace = true
inhibit-screensaver.path = "../inhibit-screensaver"

[target.'cfg(not(target_os = "windows"))'.dependencies]
gst-allocators = { package = "gstreamer-allocators", version = "0.25" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
glutin_egl_sys = { version = "0.7.1" }
rustls = { workspace = true, default-features = false, features = [ "prefer-post-quantum", "tls12", "std", "ring" ]}
reqwest = { version = "0.13", default-features = false, features = [ "charset", "http2", "system-proxy", "default-tls", "gzip", "cookies" ] }
# TODO: add this to all targets once linking is figured out
libheif-rs = { version = "2.6", default-features = false, features = [ "v1_20", "image" ], optional = true }
tokio-rustls = { workspace = true, default-features = false, features = [ "logging", "ring", "tls12" ] }
egl-sys.path = "../egl-sys"
drm-fourcc = "2.2.0"
# Wayland subsurface video sink (prototype), gated by the `wayland-subsurface` feature so
# non-winit receivers (e.g. fhs) don't pull in winit.
wayland-client = { version = "0.31", optional = true }
wayland-backend = { version = "0.3", features = ["client_system"], optional = true }
wayland-protocols = { version = "0.32", features = ["client", "unstable", "staging"], optional = true }
raw-window-handle = { version = "0.6", optional = true }
i-slint-backend-winit = { git = "https://github.com/MAlba124/slint.git", rev = "f05c68ab3", optional = true }
libplacebo-vulkan = { path = "../libplacebo-vulkan", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
gst-gl-egl = { package = "gstreamer-gl-egl", version = "0.25" }
glutin_egl_sys = { version = "0.7.1" }
tracing-gstreamer.workspace = true
tracing-panic.workspace = true
tracing = { workspace = true, features = [ "log" ] }
jni = "0.21.1"
reqwest = { version = "0.13", default-features = false, features = [ "native-tls", "charset", "http2", "system-proxy", "gzip", "cookies" ] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { version = "0.13", features = [ "native-tls", "gzip", "cookies" ] }
app-updater = { path = "../app-updater"}
tokio-rustls = { version = "0.26.4", default-features = false, features = [ "logging", "aws_lc_rs", "tls12" ] }
receiver-resources.path = "../receiver-resources"

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
hyper = { workspace = true, features = ["server"] }
http-body-util = "0.1.1"
pin-project-lite = "0.2"
gst-check = { package = "gstreamer-check", version = "0.25" }


[features]
default = []
airplay = ["dep:plist", "dep:ctr", "dep:apple-fairplay"]
extra-imgfmt = ["dep:libheif-rs"]
desktop = [
    "extra-imgfmt",
    # "slint/accessibility", Disabled because it causes too many allocations during playback
    "slint/backend-winit",
    "slint/renderer-femtovg",
    "static-gst-plugins",
    "wayland-subsurface",
]
wayland-subsurface = [
    "dep:wayland-client",
    "dep:wayland-backend",
    "dep:wayland-protocols",
    "dep:raw-window-handle",
    "dep:i-slint-backend-winit",
    "dep:libplacebo-vulkan",
]
systray = ["slint/system-tray"]
kms-backend = ["slint/backend-linuxkms"]
android = ["slint/backend-android-activity-06", "slint/renderer-skia"]
tracy = ["dep:tracing-tracy"]
static-gst-plugins = ["dep:gst-plugin-dav1d", "dep:gst-plugin-rtp"]
# Enable when linking against a fully static gstreamer-full build
static-gstreamer = []
fhs = ["extra-imgfmt", "slint/renderer-femtovg"]
