[package]
name = "mcore"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
fcast-protocol = { path = "../../sdk/common/fcast-protocol" }
fcast-sender-sdk = { path = "../../sdk/sender/fcast-sender-sdk", default-features = false, features = [ "fcast", "discovery" ] }
parking_lot.workspace = true
gst.workspace = true
gst-video.workspace = true
gst-pbutils = { package = "gstreamer-pbutils", version = "0.24.2", optional = true }
gst-app.workspace = true
gst_rs_webrtc = { package = "gst-plugin-webrtc", version = "0.14.2", default-features = false, features = ["static"] }
gst_webrtc = { package = "gstreamer-webrtc", version = "0.24.2" }
gst_sdp = { package = "gstreamer-sdp", version = "0.24.2" }
bytes = "1.10.1"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = [ "server-auto", "tokio" ] }
http-body-util = "0.1.3"
uuid.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.30.1"