[package]
name = "mcore"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
fcast-protocol = { path = "../../sdk/common/fcast-protocol" }
fcast-sender-sdk = { path = "../../sdk/sender/fcast-sender-sdk", default-features = false, features = [ "fcast", "discovery" ] }
parking_lot.workspace = true
gst.workspace = true
gst-video.workspace = true
gst-pbutils = { package = "gstreamer-pbutils", version = "0.25", optional = true }
gst-app.workspace = true
gst_rs_webrtc = { package = "gst-plugin-webrtc", version = "0.15", default-features = false, features = ["static"] }
gst_webrtc = { package = "gstreamer-webrtc", version = "0.25" }
gst_sdp = { package = "gstreamer-sdp", version = "0.25" }
bytes.workspace = true
hyper.workspace = true
hyper-util = { workspace = true, features = [ "server-auto", "tokio" ] }
http-body-util = "0.1.3"
uuid.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
smallvec.workspace = true
smol_str.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.30.1"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
app-updater = { path = "../../crates/app-updater"}