[package]
name = "plist"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
thiserror.workspace = true
hex-literal = { version = "1.0.0", optional = true }
arbitrary = { version = "1.4.1", features = [ "derive" ], optional = true }

[features]
default = []
arbitrary = ["dep:arbitrary"]