[package]
name = "android-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = "0.15.0"
ndk-context = "0.1.1"
jni = "0.21.1"
slint = { workspace = true, features = ["backend-android-activity-06"] }
async-channel = "2.3.1"
lazy_static = "1.5.0"
futures-core = "0.3.31"
tokio.workspace = true
gst-video.workspace = true
gst-app.workspace = true
anyhow.workspace = true
crossbeam-channel = "0.5.15"
gst.workspace = true
fcast-protocol = { path = "../../sdk/common/fcast-protocol" }
fcast-sender-sdk = { path = "../../sdk/sender/fcast-sender-sdk", default-features = false, features = [ "fcast" ] }
mcore.path = "../../sdk/mirroring_core/"
parking_lot.workspace = true
tracing-gstreamer = "0.9.0"
tracing = { workspace = true, features = ["log", "log-always"] }
log.workspace = true

[build-dependencies]
slint-build.workspace = true

[lib]
name = "fcastsender"
crate-type = ["cdylib"]

[package.metadata.android]
package = "org.fcast.sender"
build_targets = [ "aarch64-linux-android", "armv7-linux-androideabi", "x86_64-linux-android", "i686-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34