[package]
name = "android-sender"
version = "0.0.1"
edition = "2024"

[dependencies]
android_logger = "0.15.0"
ndk-context = "0.1.1"
jni = "0.21.1"
slint = { workspace = true, features = ["backend-android-activity-06", "std", "compat-1-2", "accessibility"] }
async-channel = "2.3.1"
lazy_static.workspace = true
futures-core = "0.3.31"
tokio.workspace = true
gst-video.workspace = true
gst-app.workspace = true
anyhow.workspace = true
crossbeam-channel = "0.5.15"
gst.workspace = true
fcast-protocol = { path = "../../sdk/common/fcast-protocol" }
fcast-sender-sdk = { path = "../../sdk/sender/fcast-sender-sdk", default-features = false, features = [ "fcast" ] }
mcore.path = "../../sdk/mirroring_core/"
parking_lot.workspace = true
tracing-gstreamer = "0.9.0"
tracing = { workspace = true, features = ["log", "log-always"] }
log.workspace = true
webbrowser.workspace = true
mimalloc = { version = "0.1", features = ["v3"] }
khronos-egl = { version = "6", features = ["dynamic"] }
libloading = "0.8.9"
glow = "0.17"

[build-dependencies]
slint-build.workspace = true

[lib]
name = "fcastsender"
crate-type = ["cdylib"]

[package.metadata.android]
package = "org.fcast.sender"
build_targets = [ "aarch64-linux-android", "armv7-linux-androideabi", "x86_64-linux-android", "i686-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34